# src/Deckster.Server/Games/Uno/UnoProjection.cs
@@ -1,3 +1,4 @@
+using Deckster.Client.Games.Uno;
 using Deckster.Server.Games.CrazyEights.Core;
 using Deckster.Server.Games.Uno.Core;
 
@@ -16,7 +17,10 @@ public class UnoProjection : GameProjection<UnoGame>
 
         return (UnoGame.Create(startEvent), startEvent);
     }
-    
-    
+
+    public Task Apply(PutCardRequest @event, UnoGame game) => game.PutCard(@event.PlayerId, @event.Card);
+    public Task Apply(PutWildRequest @event, UnoGame game) => game.PutWild(@event);
+    public Task Apply(DrawCardRequest @event, UnoGame game) => game.DrawCard(@event.PlayerId);
+    public Task Apply(PassRequest @event, UnoGame game) => game.Pass(@event.PlayerId);
 
 }
